force-app/main/default/objects/eContacts__Responses__c/eContacts__Responses__c.object-meta.xml
<CustomObject>
    <label>Responses</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>