force-app/main/default/objects/eContacts__Responses__c/fields/eContacts__Account__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>