force-app/main/default/objects/eContacts__Responses__c/fields/eContacts__Bundle__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Bundle__c</fullName>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>