force-app/main/default/objects/eContacts__Responses__c/fields/eContacts__Contact__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>