force-app/main/default/objects/eContacts__Responses__c/fields/eContacts__Question__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Question__c</fullName>
    <label>Question</label>
    <referenceTo>eContacts__Question__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>