force-app/main/default/objects/eContacts__Responses__c/fields/eContacts__Response_from_Question__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Response_from_Question__c</fullName>
    <label>Response from Question</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>